--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^4.5.0",
-    "@vitejs/plugin-react": "^4.1.1"
+    "vite": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4"
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.36",
+    "tailwindcss": "^3.4.1"
   }
 }
