added disclaimer and about

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-template",
+  "name": "should-i-click-this-frontend",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
